<resources>
    <string name="app_name">CashMoneyRewards</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="redeem">Redeem</string>
    <string name="login">login</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_profile">welcome to profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_name">Your Name</string>
    <string name="save">Save</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_now">Verify Now</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="support">Support</string>
    <string name="watch_and_win">Watch and win</string>
    <string name="full_name">Abby Sandel</string>
    <string name="back_to_home">Back to Home</string>
    <string name="username_title">Username</string>
    <string name="username">"@abby_sandel"</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="address_title">Address</string>
    <string name="address">City, Street</string>
    <string name="email_title">Email</string>
    <string name="my_profile">My Profile</string>
    <string name="adgatemedia">AdGateMedia</string>
    <string name="star">Star</string>
    <string name="appzilo">Appzilo</string>
    <string name="adgame">AdGame</string>
    <string name="offertoro">offertoro</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="register">Register</string>
    <string name="welcome_to_support">Welcome To Support</string>
    <string name="facebook_messenger">Facebook Messenger</string>
    <string name="continueBtn">Continue</string>
    <string name="signInBtn">SIGN IN</string>
    <string name="note">Note : After press the continue button, We will send an email to your email account.</string>
    <string name="haveAnAcctLbl">Have an account ?</string>
    <string name="emailForgotPasswordEdt" />
    <string name="emailLbl">E-mail</string>
    <string name="forgotPasswordLbl">Forgot Password</string>
    <string name="main_rewardedBtn">Show Rewarded Video</string>
    <string name="points">Points</string>
    <string name="show_rewardedvideo_ads">Show RewardedVideo Ads</string>
    <string name="redeem_money">Redeem Money</string>
    <string name="todo">TODO</string>
    <string name="tapjoy">Tapjoy</string>
    <string name="ayetstudios">Ayetstudios</string>
    <string name="show_offerwall">show offerwall</string>

    <string name="title_activity_banner_list">Banners</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="google_play">Google Play</string>
    <string name="_0">0</string>
    <string name="rewarded_video">Rewarded video</string>
    <string name="back_to_reward">Back to Reward</string>
    <string name="back_to_paypal">Back To Paypal</string>
    <string name="email_paypal">Email PayPal</string>
    <string name="hi_write_the_correct_information_to_send_the_money_to_you">Hi write the correct information to send the money to you</string>
    <string name="Continue">Continue</string>
    <string name="email_google_play">Email Google play</string>
    <string name="back_to_google_play">Back To Google Play</string>
    <string name="vodafone_cash_number">Vodafone cash number</string>
    <string name="back_to_vodafone_cash">Back To Vodafone Cash</string>
    <string name="id_pubg_mobile">id Pubg Mobile</string>
    <string name="back_to_pubg_mobile">Back To Pubg Mobile</string>
    <string name="id_pubg">id Pubg</string>


</resources>