<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pubgmobile_uc1875">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/walpaper">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            style="@style/TextName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_write_the_correct_information_to_send_the_money_to_you"
            android:layout_marginTop="10dp"
            style="@style/TextName"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_button_rounded"
        android:onClick="back">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_circle"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/back_to_pubg_mobile" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:padding="4dp"
                android:src="@drawable/pubg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_pubg_mobile" />

                <EditText
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/sans_bold"
                    android:inputType="textEmailAddress"
                    android:hint="@string/id_pubg"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="14sp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/TextBlackTitle"/>

                <EditText
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/sans_bold"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="14sp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_login_register"
            android:layout_marginTop="40dp"
            android:text="@string/Continue" />


    </LinearLayout>

</LinearLayout>