<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walpaper"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@drawable/logopoint"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/point"
                style="@style/TextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="100dp"
                android:text="@string/_0"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/gray"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_profile"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_profile"
                            android:fontFamily="@font/sans_bold"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/offers"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/gray"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_coins"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/offers"
                            android:fontFamily="@font/sans_bold"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:id="@+id/Reward"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/gray"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_gift"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/redeem"
                            android:fontFamily="@font/sans_bold"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/video"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/ic_videos" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/sans_bold"
                            android:text="@string/watch_and_win"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:id="@+id/support"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/gray"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="18dp"
                            android:src="@drawable/ic_support" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/sans_bold"
                            android:text="@string/support"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/logout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/gray"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/logout"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/logout"
                            android:fontFamily="@font/sans_bold"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_marginTop="20dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <com.startapp.sdk.ads.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
</ScrollView>